# ActuaLib

./: .gitignore  CMakeLists.txt  README.md  types.cpp  types.hpp
aad/: AAD.cpp  AAD.hpp  CMakeLists.txt  ad_scalar.hpp  gradient_tape.hpp  multi_output_scope.hpp  number.hpp  op_record.hpp  reverse_pass.hpp  tape_arena.hpp
concurrency/: CMakeLists.txt  executor_pool.cpp  executor_pool.hpp  task_handle.hpp  task_queue.hpp  threadpool.cpp  threadpool.hpp  worker_context.hpp
demographics/: CMakeLists.txt  mortality.hpp  mortality_model.hpp
docs/: LIBRARY_GUIDE.html  LIBRARY_GUIDE.md
esg/: CMakeLists.txt  hull_white_1f.hpp  hull_white_blackscholes.hpp  interest_rate_model.hpp  model.hpp  multivariate_blackscholes.hpp  regime_switching.hpp  rw_scenarios.hpp  yieldcurve.hpp
examples/: CMakeLists.txt  simulate_rider.cpp
math/: CMakeLists.txt  cholesky.hpp  interp.hpp  matrix.hpp  utils.hpp
math/randomnumbers/: CMakeLists.txt  gaussians.hpp  genericrng.hpp  mrg32k3a.hpp  sobol.hpp
math/rng/: mrg32k3a_engine.hpp  rng_engine.hpp  sobol_engine.hpp  sobol_joe_kuo_6_21201.hpp
math/stats/: normal.hpp
montecarlo/: CMakeLists.txt  mcsimulationAAD.hpp  nested_simulation.hpp  scenario.hpp
products/: CMakeLists.txt  product.hpp  va_base.hpp  va_combo.hpp  va_factory.hpp  va_gmab.hpp  va_gmdb.hpp  va_gmib.hpp  va_gmmb.hpp  va_gmwb.hpp  va_policy.hpp
scripts/: gen_portfolio.py  paper_pipeline.txt  run_portfolio.py  sobolev_va_training.py
tests/: CMakeLists.txt  README.md  aad_phase0_benchmark.cpp  benchComponents.cpp  nested_aad_single_policy.cpp  rng_sobol_sanity.cpp  testRiders.cpp
tests/math/: CMakeLists.txt  matrix_test.cpp
